--- a/estilo.css
+++ b/estilo.css
@@ -2,6 +2,19 @@ body {
     display: grid;
     place-content: center;
     text-align: center;
+    background-image: url('https://i.pinimg.com/originals/9e/cd/a5/9ecda51d8c2bad23237e6e63159df01b.jpg');
+}
+
+h2 {
+    border: 2px double black;
+    background-color: aquamarine;
+    padding: 5px;
+}
+
+h3 {
+    border: 2px double black;
+    background-color: rgb(203, 224, 181);
+    padding: 5px;
 }
 
 #contenedor-elecciones {
@@ -11,6 +24,7 @@ body {
     border: 4px solid black;
     background-color: lightgreen;
     padding: 15px;
+    width: 500px;
 }
 
 select {
@@ -24,4 +38,9 @@ button {
     margin-top: 20px;
     font-size: medium;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: rgb(219, 170, 194);
+}
+
+#contenedor-informacion-compra {
+   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
