--- a/estilo.css
+++ b/estilo.css
@@ -9,12 +9,18 @@ h2 {
     border: 2px double black;
     background-color: aquamarine;
     padding: 5px;
+    width: fit-content;
+    margin: auto;
+    margin-bottom: 10px;
 }
 
 h3 {
     border: 2px double black;
     background-color: rgb(203, 224, 181);
     padding: 5px;
+    width: fit-content;
+    margin: auto;
+    margin-bottom: 10px;
 }
 
 #contenedor-elecciones {
@@ -24,7 +30,8 @@ h3 {
     border: 4px solid black;
     background-color: lightgreen;
     padding: 15px;
-    width: 500px;
+    width: fit-content;
+    margin: auto;
 }
 
 select {
@@ -43,4 +50,42 @@ button {
 
 #contenedor-informacion-compra {
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+   text-align: center;
+   width: fit-content;
+   margin: auto;
+   padding: 20px;
+   margin-bottom: 10px;
 }
+
+#contenedor-carrito-compra {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(51, 3, 51);
+    font-size: larger;
+}
+
+img {
+    width: 120px;
+    height: 120px;
+}
+
+.producto-container {
+    width: 175px;
+    margin: 10px;
+    padding: 5px;
+    border: 2px solid black;
+    background-color: white;
+    text-align: center;
+}
+
+  
+  
+  
+  
+  
+  
+
+
+
