--- a/estilo.css
+++ b/estilo.css
@@ -7,7 +7,7 @@ body {
 
 h2 {
     border: 2px double black;
-    background-color: aquamarine;
+    background-color: lightcoral;
     padding: 5px;
     width: fit-content;
     margin: auto;
@@ -36,7 +36,7 @@ h3 {
 
 select {
     border: 2px solid black;
-    background-color: orange;
+    background-color: peachpuff;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -62,23 +62,38 @@ button {
     flex-wrap: wrap;
     justify-content: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(51, 3, 51);
     font-size: larger;
 }
 
 img {
     width: 120px;
-    height: 120px;
+    height: 150px;
 }
 
 .productos {
-    width: 175px;
+    width: 200px;
     margin: 10px;
     padding: 5px;
     border: 2px solid black;
     background-color: white;
     text-align: center;
 }
+
+.metodo-pago {
+    text-align: center;
+    display: grid;
+}
+
+.metodo-pago select {
+    margin-top: 10px;
+    font-size: medium;
+}
+
+.cantidades-permitidas select {
+    width: 200px;
+    font-size: medium;
+}
+
 
   
   
