agregue el boton de comprar y realize las ultimas modificaciones al css

--- a/estilo.css
+++ b/estilo.css
@@ -94,6 +94,11 @@ img {
     font-size: medium;
 }
 
+.boton-compra {
+    background-color: chocolate;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 
   
   
